--- a/css/itachi.css
+++ b/css/itachi.css
@@ -5,12 +5,6 @@ a { color:#555; text-decoration:none; }
 a:hover { text-decoration:none; }
 .clearfix:after{content: '';display: block;height: 0;line-height: 0;visibility: hidden;clear: both;zoom:1;}
 
-
-.section {
-    position: relative;
-   
-}
-
 #nav{width:100%;height:80px;background-color:rgba(57,66,69,0.7);position:absolute;top:0;left:0;z-index:2;border-bottom:1px solid rgba(37,42,45,0.5);}
 .nav-left{float:left;width:180px;height:80px;margin-left:8.5%;cursor:default;}
 .it{font-size: 34px;color:#EE8687;margin-top: 3px;}
@@ -29,7 +23,7 @@ nav{float:right;margin-right:9%;}
 .nav-mini li{height:35px;line-height:35px;width:90px;margin:2px 0;background:rgba(57,66,69,0.7);color:#ddd;text-align:center;cursor:pointer;}
 
 /* bg */
-#bg{width:100%;height:650px;background:url(../img/bg-0.jpg) center center no-repeat rgba(0,0,0,0.8);background-size:cover;}
+#bg{width:100%;height:650px;background:url(../img/bg-0.jpeg) center center no-repeat rgba(0,0,0,0.8);background-size:cover;}
 .bg{width:100%;height:650px;background:rgba(0,0,0,0.2);position:absolute;top:0;left:0; text-align:center;color:#fff;background-size:cover;}
 .bg h3{text-align:center;position:absolute;width:90%;font:30px "Tahoma";top:320px;transition:all 2s;opacity:0;}
 .gradi{width:100%;height:1px;background:rgba(255,255,255,0) 
@@ -170,7 +164,7 @@ color:#df744a;}
 .list li.active{background:#EE8687;}
 .cont-r .main.selected{display:block;}
 
-#contact{height:590px;width:100%;position:relative;background: url(../img/bg-0.jpg);background-size: cover;}
+#contact{height:590px;width:100%;position:relative;background: url(../img/bg-0.jpeg);background-size: cover;}
 
 .con-cont{overflow:hidden;z-index:1;position:absolute;
 	left:0;top:0;width:100%;}
